<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="40sp" android:textColor="#fff" android:id="@+id/app_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="100dp" android:text="@string/app_name" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:textAlignment="center"/>
    <ScrollView android:id="@+id/scrollView" android:layout_width="match_parent" android:layout_height="300dp" android:layout_marginLeft="15dp" android:layout_marginTop="35dp" android:layout_marginRight="15dp" android:layout_below="@+id/app_name" android:layout_centerHorizontal="true" android:textAlignment="textStart" android:layout_marginHorizontal="15dp">
        <TextView android:textSize="15sp" android:textColor="#fff" android:id="@+id/notice" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="35dp" android:layout_marginRight="15dp" android:text="@string/noticepara" android:textAlignment="textStart" android:layout_marginHorizontal="15dp"/>
    </ScrollView>
    <TextView android:textSize="15sp" android:textColor="#fff" android:id="@+id/devname" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="50dp" android:layout_marginTop="25dp" android:layout_marginRight="50dp" android:text="@string/devnameauthor" android:layout_below="@+id/scrollView" android:textAlignment="textEnd" android:layout_alignParentEnd="true" android:layout_marginHorizontal="50dp"/>
    <Button android:textSize="17sp" android:id="@+id/backButton" android:background="@drawable/button_rounded" android:layout_width="wrap_content" android:layout_height="30dp" android:layout_marginTop="25dp" android:layout_marginBottom="75dp" android:text="@string/back" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:textAllCaps="false" android:fontFamily="@font/caros"/>
    <com.google.android.gms.ads.AdView android:id="@+id/ads" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:adSize="BANNER" app:adUnitId="ca-app-pub-2924639732611391/2471026843"/>
</RelativeLayout>
