<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/gradient_background" android:layout_width="match_parent" android:layout_height="match_parent" android:fontFamily="@font/caros">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="20sp" android:textColor="#fff" android:id="@+id/heading" android:background="#1d2671" android:padding="10dp" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/leaguestandingsLL" android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
        <RelativeLayout android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_centerInParent="true">
            <ProgressBar android:theme="@style/progressBar" android:id="@+id/progressBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="0dp" android:max="100" android:indeterminate="false" android:minWidth="50dp" android:minHeight="50dp" android:layout_centerInParent="true"/>
            <TextView android:textSize="20sp" android:textColor="#fff" android:id="@+id/pleasewait" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="25dp" android:layout_marginTop="10dp" android:layout_marginRight="25dp" android:text="@string/pleasewait" android:layout_below="@+id/progressBar" android:textAlignment="center" android:layout_marginHorizontal="25dp"/>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="25dp" android:layout_marginTop="20dp" android:layout_marginRight="25dp" android:layout_marginBottom="25dp" android:layout_below="@+id/heading" android:layout_marginHorizontal="25dp">
            <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
                <RelativeLayout android:id="@+id/input" android:background="@drawable/rounded_border" android:paddingLeft="10dp" android:paddingRight="10dp" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:elevation="8dp" android:paddingHorizontal="10dp">
                    <TextView android:textSize="22sp" android:textStyle="bold" android:textColor="#000" android:id="@+id/chooseTeams" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="10dp" android:text="@string/standings" android:singleLine="true" android:layout_centerHorizontal="true" android:fontFamily="@font/caros" android:textAlignment="center" android:layout_marginHorizontal="10dp"/>
                    <View android:id="@+id/linebreak" android:background="#c0c0c0" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_below="@+id/chooseTeams" android:layout_centerHorizontal="true" android:layout_marginHorizontal="10dp"/>
                    <TableLayout android:id="@+id/tablelayout" android:background="@drawable/cell_border" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="15dp" android:layout_marginTop="25dp" android:layout_marginRight="15dp" android:layout_marginBottom="10dp" android:layout_below="@+id/linebreak" android:layout_marginHorizontal="15dp"/>
                    <Button android:textSize="17sp" android:textColor="#fff" android:id="@+id/backButton" android:background="@drawable/button_rounded" android:layout_width="wrap_content" android:layout_height="30dp" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:text="@string/back" android:layout_below="@+id/tablelayout" android:layout_centerHorizontal="true" android:textAllCaps="false" android:fontFamily="@font/caros"/>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>
    </RelativeLayout>
    <com.google.android.gms.ads.AdView android:id="@+id/ads" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:adSize="BANNER" app:adUnitId="ca-app-pub-2924639732611391/5077008884"/>
</RelativeLayout>
